--- a/Assets/data/resources/app.json
+++ b/Assets/data/resources/app.json
@@ -1,21 +1,17 @@
 {
-	"tag": "\u81EA\u5B9A\u4E49",
-	"appName": "",
-	"bundleIdentifier": "",
 	"version": "1.0.0",
-	"bundleVersionCode": 0,
-	"scriptingDefineSymbols": "",
-	"loginUrl": "",
-	"CDN": "",
-	"spareCDN": "",
+	"loginUrl": "dd",
+	"cdn": "file:///C:/Users/Administrator/Desktop/msg30",
+	"spareCDN": "ddd",
 	"isOpenGuide": true,
 	"updateMode": true,
 	"functionUnlock": false,
 	"log": false,
 	"webLog": false,
 	"webLogIp": 
-		[],
-	"androidPlatformName": "Android",
-	"iOSPlatformName": "IOS",
-	"defaultPlatformName": "Windows"
+		[
+			"a",
+			"b"
+		],
+	"platformName": "Android_web"
 }
