--- a/Assets/data/conf/manifestfile.json
+++ b/Assets/data/conf/manifestfile.json
@@ -129,6 +129,14 @@
 					"directDependencies": 
 						[]
 				},
+			"data/ui/gameobject.prefab": 
+				{
+					"name": "data/ui/gameobject.prefab",
+					"MD5": "39ef0d66de434e54a12cd027341cb504",
+					"size": 2,
+					"directDependencies": 
+						[]
+				},
 			"data/ui/uiloading.prefab": 
 				{
 					"name": "data/ui/uiloading.prefab",
