--- a/Assets/data/conf/manifestfile.json
+++ b/Assets/data/conf/manifestfile.json
@@ -25,6 +25,30 @@
 					"directDependencies": 
 						[]
 				},
+			"data/lua/a.txt": 
+				{
+					"name": "data/lua/a.txt",
+					"MD5": "f1f07561612b02132a63c0f172fbc5b2",
+					"size": 2,
+					"directDependencies": 
+						[]
+				},
+			"data/lua/lua.txt": 
+				{
+					"name": "data/lua/lua.txt",
+					"MD5": "02d6e22bb4a88d280f656d9d426df147",
+					"size": 2,
+					"directDependencies": 
+						[]
+				},
+			"data/lua/main.txt": 
+				{
+					"name": "data/lua/main.txt",
+					"MD5": "5acf8faaae32130edbeb0ed30159c9c2",
+					"size": 2,
+					"directDependencies": 
+						[]
+				},
 			"data/texture/background/bg_0.png": 
 				{
 					"name": "data/texture/background/bg_0.png",
@@ -36,7 +60,7 @@
 			"data/texture/common.atlas.spriteatlas": 
 				{
 					"name": "data/texture/common.atlas.spriteatlas",
-					"MD5": "51cd92af6e5d07422bfe4a66be238231",
+					"MD5": "54a2f98ca01bdbd2d90f434e3641eed4",
 					"size": 18,
 					"directDependencies": 
 						[]
@@ -60,7 +84,7 @@
 			"data/ui/uiloading.prefab": 
 				{
 					"name": "data/ui/uiloading.prefab",
-					"MD5": "741e004b2e4c19cf333266d1906052e1",
+					"MD5": "52d85bbb743bc0e7ebc6a93c45b3576c",
 					"size": 1265,
 					"directDependencies": 
 						[
@@ -71,7 +95,7 @@
 			"data/ui/uinormaltipsbox.prefab": 
 				{
 					"name": "data/ui/uinormaltipsbox.prefab",
-					"MD5": "5ee1a738845953b386ab9b7f48ad3a09",
+					"MD5": "087ba70888597954291464d1322e25d8",
 					"size": 26,
 					"directDependencies": 
 						[
